vw scrollbar fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -345,6 +345,7 @@ body {
 
 html {
 	background-color: $dark;
+	width: 100vw;
   min-height: 100%;
   height: 800px;
   margin: 0 !important;
